# reason-native

./: .gitattributes  .gitignore  .hgignore  .merlin  .npmignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  ORIGINS.md  README.md  azure-pipelines.yml  browser-extension.json  chalk-console.json  chalk.json  cli.json  cli.opam  common.json  console.README.md  console.esy.lock.json  console.json  console.opam  coverage.json  dir.json  dir.opam  dune  dune-project  esy.json  esy.lock.json  esy.opam  esydune  esydune.json  esymono  file-context-printer.README.md  file-context-printer.json  file-context-printer.opam  fp.json  fp.opam  frame.json  fs.json  fs.opam  (+34 more)
src/console/: CHANGELOG.md  Console.re  Console.rei  ConsoleTable.re  ConsoleTable.rei  ConsoleTableBorderStyle.re  README.md  dune  esy.lock.json  nativeChannels.c
src/console/.circleci/: config.yml
src/console/test/: TestConsole.re  dune
src/pastel/: .gitignore  ColorName.re  Decorators.re  DisabledImplementation.re  DisabledImplementation.rei  EnableWinConsoleColors.re  HumanReadableImplementation.re  MakeAnsiDecorator.re  Mode.re  ORIGINS.md  Pastel.re  Pastel.rei  PastelFactory.re  PastelImplementation.re  PastelLexer.re  PastelSig.re  PastelUtils.re  README.md  StateMachine.re  States.re  SupportsColor.re  SupportsColor.rei  TerminalImplementation.re  TerminalLexer.re  Token.re  WinConsoleColorsSupport.re  WinConsoleColorsSupport.rei  WinCygPtySupport.re  dune  enableWinConsoleColors.c  enableWinConsoleColors.js  winConsoleColorsSupport.c  winConsoleColorsSupport.js  winCygPtySupport.c  winCygPtySupport.h  winCygPtySupport.js
src/pastel/ansiTerminal/: Ansi.re  TerminalImplementation.re  TerminalImplementation.rei  TerminalLexer.re
src/pastel/humanReadable/: HumanReadable.re  HumanReadableImplementation.re  HumanReadableImplementation.rei  HumanReadableLexer.re
src/pastel/terminalConfiguration/: Pastel.md
src/pesy/assets/: dune  pesy-App.template.re  pesy-README.template.md  pesy-Test.template.re  pesy-gitignore.template  pesy-package.template.json
src/refmterr/lib/: Atom.ml  FileContextPrinter.re  StackUtils.re  atom.re  betterErrorsTypes.re  dune  helpers.re  index.re  parseError.re  parseWarning.re  printer.re  reportError.re  reportWarning.re  reporter.re  stylish.re  terminalEntry.re  types.atd
src/rely/: .gitignore  .hgignore  AssertionState.re  CLI.re  Clock.re  Clock.rei  CollectionTypes.re  Describe.re  FileSystemSnapshot.re  Mock.re  Mock.rei  PolymorphicPrint.re  PolymorphicPrint.rei  README.md  Rely.re  Rely.rei  RelyAPI.re  RelyAPI.rei  RelyCLI.re  Reporter.re  RunConfig.re  Snapshot.re  Snapshot.rei  SnapshotIO.re  StackTrace.re  StackTrace.rei  State.re  Strings.re  TerminalReporter.re  Test.re  TestFramework.re  TestFrameworkConfig.re  TestLifecycle.re  TestPath.re  TestResult.re  TestResultUtils.re  TestSuite.re  TestSuiteFilter.re  TestSuiteRunner.re  Time.re  (+2 more)
src/rely/matchers/: ArrayMatchers.re  BoolMatchers.re  CollectionMatchers.re  DefaultMatchers.re  EqualityValidator.re  EqualsMatcher.re  FloatMatchers.re  ListMatchers.re  MatcherTypes.re  MatcherUtils.re  MatcherUtils.rei  MockMatchers.re  OptionMatchers.re  ResultMatchers.re  SameMatcher.re  SnapshotMatchers.re  StringMatchers.re
src/rely/reporters/: JunitReporter.re  JunitReporter.rei  Reporter.re  TerminalReporter.re
tests/: GetProjectRoot.re  IO.re  ReasonNativeTests.re  TestCi.re  TestDev.re  TestFramework.re  TestRunnerOutputSnapshotTest.re  Utils.re  dune
tests/__snapshots__/: CLI.156a5f51.0.snapshot  CLI.156a5f51.1.snapshot  CLI.160bfa5e.0.snapshot  CLI.160bfa5e.1.snapshot  CLI.162d7436.0.snapshot  CLI.162d7436.1.snapshot  CLI.3bef9b91.0.snapshot  CLI.3bef9b91.1.snapshot  CLI.4647eb06.0.snapshot  CLI.4647eb06.1.snapshot  CLI.4f855017.1.snapshot  CLI.4f855017.2.snapshot  CLI.4f855017.3.snapshot  CLI.4f855017.5.snapshot  CLI.4f855017.7.snapshot  CLI.4f855017.9.snapshot  CLI.52535b49.0.snapshot  CLI.52535b49.10.snapshot  CLI.52535b49.12.snapshot  CLI.52535b49.2.snapshot  CLI.52535b49.4.snapshot  CLI.52535b49.6.snapshot  CLI.52535b49.9.snapshot  CLI.636ebdc1.0.snapshot  CLI.636ebdc1.1.snapshot  CLI.9ed1ade9.0.snapshot  CLI.9ed1ade9.1.snapshot  CLI.b0da32b5.1.snapshot  CLI.b0da32b5.2.snapshot  CLI.b0da32b5.3.snapshot  CLI.b0da32b5.5.snapshot  CLI.b0da32b5.7.snapshot  CLI.b0da32b5.9.snapshot  CLI.b237eb24.0.snapshot  CLI.b237eb24.1.snapshot  CLI.b52752cd.0.snapshot  CLI.b52752cd.1.snapshot  Console.03902e29.0.snapshot  Console.09dcbe59.0.snapshot  Console.1fbac3a5.0.snapshot  (+151 more)
tests/__snapshots_test_runner_output__/failing_tests/: failing_tests.a14d8d95.0.snapshot
tests/__tests__/cli/: CLI_test.re
tests/__tests__/console/: ConsoleTable_test.re  Console_test.re
tests/__tests__/dir/: Dir_test.re
tests/file_SyntaxError/: file_SyntaxError_6_expected.txt
tests/misc/: misc_1.ml  misc_5_2.ml
tests/prettyPrint/: prettyPrint_2_expected.txt
tests/specialTests/: specialTests_4_expected.txt
tests/type_AppliedTooMany/: type_AppliedTooMany_1_expected.txt  type_AppliedTooMany_3.ml
tests/type_FunctionWrongLabel/: type_FunctionWrongLabel_3_expected.txt
tests/type_IncompatibleType/: type_IncompatibleType_1_expected.txt  type_IncompatibleType_5_expected.txt  type_IncompatibleType_7_expected.txt  type_IncompatibleType_8_expected.txt
tests/type_MismatchTypeArguments/: type_MismatchTypeArguments_1.ml
tests/type_RecordFieldNotBelong/: type_RecordFieldNotBelong_1.ml  type_RecordFieldNotBelong_3_expected.txt
tests/type_SignatureItemMismatch/: type_SignatureItemMismatch_11.ml  type_SignatureItemMismatch_2.ml  type_SignatureItemMismatch_2_expected.txt  type_SignatureItemMismatch_4_expected.txt  type_SignatureItemMismatch_5_expected.txt  type_SignatureItemMismatch_7_expected.txt
tests/type_UnboundModule/: type_UnboundModule_1_expected.txt
tests/type_UnboundRecordField/: type_UnboundRecordField_1.ml
tests/type_UnboundTypeConstructor/: type_UnboundTypeConstructor_1.ml
tests/warning_OptionalArgumentNotErased/: warning_OptionalArgumentNotErased_1_expected.txt  warning_OptionalArgumentNotErased_2_expected.txt
(+674 files in other folders)
