opam-version: "2.0"
maintainer: "Facebook Engineering"
authors: ["Facebook Engineering"]
license: "MIT"
homepage: "https://reason-native.com"
doc: "https://reason-native.com"
bug-reports: "https://github.com/facebookexperimental/reason-native"
dev-repo: "git://github.com/facebookexperimental/reason-native"
tags: ["cli" "reasonml" "reason" "ocaml" "esy"]
build: [ ["dune" "build" "-p" "cli" ] ]
depends: [
  "dune"
  "re"
  "pastel"
  "reason"   {< "4.0.0"}
  "ocaml"   {>= "4.2.0" & < "5.0.0"}
]
synopsis: "Build Command Line Interfaces in Reason"
description: "Build Command Line Interfaces in Reason"
