opam-version: "0.1.0"
maintainer: "Facebook Engineering"
authors: ["Facebook Engineering"]
license: "MIT"
homepage: "https://reason-native.com"
doc: "https://reason-native.com"


tags: []
build: [ ["dune" "build" "-p" "console" ] ]
depends: [
  dune
  reason   {< "4.0.0"}
  ocaml   {>= "4.2.0" & < "5.0.0"}
]
synopsis: "No effort, universal logger"
description: "No effort, universal logger"
