opam-version: "0.0.0"
maintainer: "Facebook Engineering"
authors: ["Facebook Engineering"]
license: "MIT"
homepage: "https://reason-native.com"
doc: "https://reason-native.com"


tags: []
build: [ ["refmterr" "dune" "build" "--profile=release" ] ]
depends: [
  dune
  reason   {< "4.0.0"}
  refmterr
  ocaml   {>= "4.2.0" & < "5.0.0"}
  re
  atdgen
  junit
  qcheck-core   {>= "0.9" & < "0.10"}
]
synopsis: "My Project"
description: "My Project"
