opam-version: "0.0.3"
maintainer: "Facebook Engineering"
authors: ["Facebook Engineering"]
license: "MIT"
homepage: "https://reason-native.com"
doc: "https://reason-native.com"
bug-reports: "https://github.com/facebookexperimental/reason-native"
dev-repo: "git://github.com/facebookexperimental/reason-native"
tags: []
build: [ ["dune" "build" "-p" "file-context-printer" ] ]
depends: [
  "dune"
  "reason"   {< "4.0.0"}
  "ocaml"   {>= "4.2.0" & < "5.0.0"}
  "re"
  "pastel"
]
synopsis: "A utility for pretty printing source code"
description: "A utility for pretty printing source code"
