opam-version: "0.0.1"
maintainer: "Facebook Engineering"
authors: ["Facebook Engineering"]
license: "MIT"
homepage: "https://reason-native.com"
doc: "https://reason-native.com"
bug-reports: "https://github.com/facebookexperimental/reason-native/tree/master/src/fp"
dev-repo: "https://github.com/facebookexperimental/reason-native/tree/master/src/fp"
tags: ["path" "fp" "filesystem" "directories" "reasonml" "reason" "ocaml" "esy"]
build: [ ["dune" "build" "-p" "fp" ] ]
depends: [
  "dune"
  "reason"   {< "4.0.0"}
  "ocaml"   {>= "4.2.0" & < "5.0.0"}
]
synopsis: "Reason Native file paths library."
description: "Reason Native file paths library."
