opam-version: "2.0"
maintainer: "Facebook Engineering"
authors: ["Facebook Engineering"]
license: "MIT"
homepage: "https://reason-native.com"
doc: "https://reason-native.com"
bug-reports: "https://github.com/facebookexperimental/reason-native"
dev-repo: "git://github.com/facebookexperimental/reason-native"
tags: ["file-system" "fs" "filesystem" "directories" "reasonml" "reason" "ocaml" "esy"]
build: [ ["dune" "build" "-p" "fs" ] ]
depends: [
  "fp"   {>= "0.0.0" & < "1.0.0"}
  "dune"
  "reason"   {< "4.0.0"}
  "ocaml"   {>= "4.2.0" & < "5.0.0"}
]
synopsis: "Reason Native file system API"
description: "Reason Native file system API"
