opam-version: "3.2.2"
maintainer: "[object Object]"
authors: ["[object Object]"]
license: "undefined"
homepage: "undefined"
doc: "undefined"


tags: []
build: [ ["dune" "build" "-p" "refmterr" ] ]
depends: [
  dune
  re
  reason   {< "4.0.0"}
  ocaml   {" & >= " " 4.2.0" & < ""4.9.0"}
  pastel
  atdgen
  console
]
synopsis: "Reason Formatting of Errors"
description: "Reason Formatting of Errors"
