opam-version: "0.0.0"
maintainer: "undefined"
authors: ["undefined"]
license: "MIT"
homepage: "undefined"
doc: "undefined"
bug-reports: "https://github.com/facebookexperimental/reason-native/tree/master/src/unicode-config"
dev-repo: "https://github.com/facebookexperimental/reason-native/tree/master/src/unicode-config"
tags: []
build: [ ["dune" "build" "-p" "unicode-config" ] ]
depends: [
  dune
  reason
  ocaml   {>= "4.2.0" & < "5.0.0"}
]
synopsis: "Configuration used to generate the @reason-native/unicode library"
description: "Configuration used to generate the @reason-native/unicode library"
