opam-version: "0.0.0"
maintainer: "Facebook Engineering"
authors: ["Facebook Engineering"]
license: "MIT"
homepage: "https://reason-native.com"
doc: "https://reason-native.com"
bug-reports: "https://github.com/facebookexperimental/reason-native/tree/master/src/unicode"
dev-repo: "https://github.com/facebookexperimental/reason-native/tree/master/src/unicode"
tags: []
build: [ ["dune" "build" "-p" "unicode" ] ]
depends: [
  "dune"
  "reason"   {< "4.0.0"}
  "ocaml"   {>= "4.2.0" & < "5.0.0"}
]
synopsis: "Easy to use and well documented Unicode symbols"
description: "Easy to use and well documented Unicode symbols"
