opam-version: "2.0"
maintainer: "Facebook Engineering"
authors: ["Facebook Engineering"]
license: "MIT"
homepage: "https://reason-native.com"
doc: "https://reason-native.com"


tags: []
build: [ ["dune" "build" "-p" "utf8" ] ]
depends: [
  "dune"
  "reason"   {< "4.0.0"}
  "ocaml"   {>= "4.2.0" & < "5.0.0"}
]
synopsis: "Utf8 logic with minimal dependencies."
description: "Utf8 logic with minimal dependencies."
