(library
  (name Tests)
  ; IMPORTANT: -linkall flag is required to include all tests.
  (ocamlopt_flags -linkall -g)
  (libraries
    rely.lib
    pastel.lib
    console.lib
    pastel-console.lib
  )
  (modules (:standard \ ReasonNativeTests))
)
(executable
  (package tests)
  (name ReasonNativeTests)
  (public_name ReasonNativeTests.exe)
  (libraries
    Tests
  )
  (modules ReasonNativeTests)
)
(include_subdirs unqualified)
(dirs :standard __tests__)
