(library
  (name Tests)
  ; IMPORTANT: -linkall flag is required to include all tests.
  (ocamlopt_flags -linkall -g)
  (libraries
    path.lib
    rely.lib
    rely.internal
    pastel.lib
    console.lib
    pastel-console.lib
  )
  (modules (:standard \ TestDev TestCi))
)
(executable
  (package tests)
  (name TestDev)
  (public_name TestDev.exe)
  (libraries
    Tests
  )
  (modules TestDev)
)
(executable
  (package tests)
  (name TestCi)
  (public_name TestCi.exe)
  (libraries
    Tests
  )
  (modules TestCi)
)
(include_subdirs unqualified)
(dirs :standard __tests__)

