(library
  (name ReasonNativeTests)
  (public_name reason-native.tests)
  ; IMPORTANT: -linkall flag is required to include all tests.
  (ocamlopt_flags -linkall -g)
  (libraries
    path.lib
    fs.lib
    dir.lib
    rely.lib
    rely.internal
    pastel.lib
    console.lib
    pastel-console.lib
    sexplib0
  )
  (modules (:standard \ TestDev TestCi))
)
(executable
  (package tests)
  (name TestDev)
  (public_name TestDev.exe)
  (libraries
    ReasonNativeTests
  )
  (modules TestDev)
)
(executable
  (package tests)
  (name TestCi)
  (public_name TestCi.exe)
  (libraries
    ReasonNativeTests
  )
  (modules TestCi)
)
(include_subdirs unqualified)
(dirs :standard __tests__)
