(library
   (name Console)
   (public_name console.lib)
   (c_names  nativeChannels )
   (preprocess (pps bisect_ppx --conditional))
   (js_of_ocaml
     (flags ( --pretty )) 
     (javascript_files  nativeChannels.js )
   )
  )
; objectPrinter lives separately from Common for now because Common has an
; implicit dependency on Pastel which Console does not want. Common should
; ideally be split up into sub directories/packages which can be more precisely
; consumed
(copy_files# ../../shared-src/objectPrinter/*)

