(library
   (name Rely)
   (public_name rely.lib)
   (libraries pastel.lib file-context-printer.lib unix)
)
(copy_files# ../../common/*)
; objectPrinter lives separately from Common for now because Common has an
; implicit dpeendency on Pastel which Console does not want. Common should
; ideally be split up into sub directories/packages which can be more precisely
; consumed
(copy_files# ../../objectPrinter/*)
(include_subdirs unqualified)
