(library
   (name Rely)
   (public_name rely.lib)
   (libraries rely.internal)
   (flags :standard -w -23 -w -27 -w -32 -w -6 -w -9 -w -33)
   (modules Rely)
)
(
    library
    (name RelyInternal)
    (public_name rely.internal)
    (libraries pastel.lib file-context-printer.lib unix re cli.lib)
    (modules (:standard \ Rely))
    (flags (:standard -w -23 -w -27 -w -32 -w -6 -w -9 -w -30 -w -33))
)
(copy_files# ../../shared-src/common/*)
; objectPrinter lives separately from Common for now because Common has an
; implicit dependency on Pastel which Console does not want. Common should
; ideally be split up into sub directories/packages which can be more precisely
; consumed
(copy_files# ../../shared-src/objectPrinter/*)
(include_subdirs unqualified)
