(rule
 (targets types_j.ml
          types_j.mli)
 (deps    types.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets types_t.ml
          types_t.mli)
 (deps    types.atd)
 (action  (run atdgen -t %{deps})))

(library (name Refmterr)
    (flags :standard -w -23 -w -27 -w -32 -w -33 -w -9 -w -6)
    (public_name refmterr.lib)
    (libraries atdgen re.pcre unix pastel.lib))
(copy_files# ../../../shared-src/common/*)
